--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#343a40",
     "icons": [
       {
-        "src": "img/icon.png",
+        "src": "/img/icon.png",
         "sizes": "192x192",
         "type": "image/png"
       }
