--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
     "name": "Identificador Imagenes",
     "short_name": "Identificador",
     "description": "Una aplicación web progresiva para el reconocimiento de Imagenes",
-    "start_url": ".",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#f8f9fa",
     "theme_color": "#343a40",
     "icons": [
       {
-        "src": "/img/icon.png",
+        "src": "img/icon.png",
         "sizes": "192x192",
         "type": "image/png"
       }
